--- a/styleIndex.css
+++ b/styleIndex.css
@@ -64,3 +64,34 @@ button
    background-color: white;
    margin: 20px 1px;
 }
+.filter
+{
+   text-align: left;
+   display: flex;
+   flex-direction: column;
+   font-weight: bold;
+   font-size: large;
+}
+.filter input{
+   padding: 10px;
+   border-radius: 5px;
+}
+.filterbtn
+{
+   margin: 10px;
+}
+#filterR
+{
+   color: rgb(39, 151, 2) ;
+   border: rgb(39, 151, 2) 1px solid;
+   background-color: white;
+   margin: 20px 1px;
+}
+#menu
+{
+   background-color: white;
+   border: 1px green solid;
+   color: green;
+   margin: auto;
+   width: 25%;
+}
